* Fix language in `AbstractInboundFileSynchronizingMessageSource.doReceive()` JavaDoc * Bring back a proper JavaDoc for `RemoteFileOperations.rename()` * Extract pattern variable for the `if` in the `FileWritingMessageHandler.handleRequestMessage()` * Fix indents in the `HeadDirectoryScanner.HeadFilter` record